<resources>
    <string name="app_name">ESLImageTransfer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">ESL Image Transfer</string>
    <string name="second_fragment_label">Send Image Data</string>
    <string name="next">Next</string>
    <string name="openimage">Open Image</string>
    <string name="clear">Clear</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sendimage">Send Image</string>
    <string name="getweather">Get Weather</string>
    <string name="scan_for_esl_devices">Scan for ESL devices</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="ble_devices">BLE Devices</string>
    <string name="favorites">Favorites</string>
    <string name="hello_first_fragment">written by Larry Bank</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>