<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_for_esl_devices"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ble_scan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_devices"
        app:layout_constraintBottom_toTopOf="@id/lelist"
        app:layout_constraintTop_toBottomOf="@id/scan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:id="@+id/lelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/favslist"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ble_scan_text" />

    <TextView
        android:id="@+id/favorites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        app:layout_constraintBottom_toTopOf="@id/favslist"
        app:layout_constraintTop_toBottomOf="@id/lelist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <ListView
        android:id="@+id/favslist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/button_favorite"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lelist" />

    <Button
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favslist" />
    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_favorite" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintTop_toBottomOf="@id/button_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>